# MORS_etf_2025_tutorial_demo

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  PROJECT_OVERVIEW.md  README.md  SETUP_GUIDE.md  pyproject.toml  quantum_golden.csv  requirements.txt  tldr_agent_golden_dataset.csv
.claude/: settings.local.json
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  answer_generator.py  formatter.py  reviewer.py  router.py
app/api/: orchestrator.py  schemas.py
app/database/: __init__.py  conversation_store.py  models.py
app/llm/: __init__.py  ollama_client.py
app/rag/: retriever.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
scripts/: README.md  __init__.py  build_index.py  quantum_seeds.py  scrape_wikipedia.py  scrape_wikipedia_api.py
